--- a/portfolio/stylessssss.css
+++ b/portfolio/stylessssss.css
@@ -114,3 +114,9 @@ h1{
         #head_1{
             color:rgb(190, 64, 85) !important;
         }
+        footer {
+            text-align: center;
+            padding: 20px;
+            background-color: #333;
+            color: #fff;
+          }
